Update testing materials